--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
             <nav>
                 <ul>
                     <li><p>Step: 1</p></li>
-                    <li><button onclick="handleGenerate(150)">Generate</button></li>
+                    <li><button onclick="handleGenerate(250)">Generate</button></li>
                     <li><p>Step: 2</p></li>
                     <li><button onclick="handlebubbleSort()">Bubble Sort</button></li>
                     <li><a href="#">Merge Sort</a></li>
-                    <li><a href="#">Quick Sort</a></li>
-                    <li><a href="#">Counting Sort</a></li>
+                    <li><button onclick="handleQuickSort()">Quick Sort</button></li>
                 </ul>
             </nav>
         </div>
